ui: fix font alignment across app

--- a/frontend/src/pages/Dashboard/DashboardCharts/dashboardChart.scss
+++ b/frontend/src/pages/Dashboard/DashboardCharts/dashboardChart.scss
@@ -1441,6 +1441,7 @@ html.gs-is-scrolling {
     padding: 14px 10px;
     font-weight: 700;
     vertical-align: middle;
+    line-height: 1.2;
   }
 
   tbody tr td:first-child {
